--- a/public/css/main.styl
+++ b/public/css/main.styl
@@ -14,12 +14,16 @@ h1, h2, h3, h4
 	font-weight: 300;
 	font-size: 24px
 
-#container
+h2
+	font-size: 18px
+	font-weight: 400
+
+#container, #container2
 	width: 928px
 	margin: 0 auto 0 auto
 	background-color: #F9F9F9
 	min-height: 100%
-	padding: 100px 0 66px 0
+	padding: 0px 0 66px 0
 
 	#welcome
 		width: 100%
@@ -99,8 +103,32 @@ h1, h2, h3, h4
 	#description
 		margin: 66px 66px 0px 66px
 
+#container2
+	background-color: white
+	padding-top: 33px
+
+	pre
+		margin: 0 0 0 0
+		background-color: rgba(0,0,0,.05)
+		padding: 5px
+		border: 1px solid rgba(0,0,0,.05)
+		font-size: 14px
+		overflow: auto;
+
+	.right
+
+	div
+		clear: both
+		margin-bottom: 100px 0
+
+	#howto
+		margin: 0 66px 0px 66px
+
 .visible
 	display: block !important
 
 .invisible
 	display: none !important
+
+.small
+	font-size: 11px
