Added terms of service.

--- a/public/css/main.styl
+++ b/public/css/main.styl
@@ -55,7 +55,7 @@ h2
 			display: none
 
 		#create
-			margin: 80px 66px 0 0
+			margin: 62px 66px 0 0
 
 			h1
 				margin: 0
@@ -73,6 +73,7 @@ h2
 					margin: 8px 0
 					padding: 0
 					border: 0
+					text-align: center
 
 					input
 						font-size: 18px
@@ -92,6 +93,12 @@ h2
 						color: white
 					input[type='submit']:active
 							background-color: #206D1B
+					label
+						font-size: 14px
+						input[type='checkbox']
+								width: auto
+								height: auto
+								margin-right: 10px
 
 					.error
 						margin: 0
