Added links for both API and web.

--- a/views/index.pug
+++ b/views/index.pug
@@ -39,7 +39,7 @@ html
 				h1 Why use the.fourth.party?
 				p The main reason for using the.fourth.party is to add an extra layer of security to your users authentication. By outsourcing the second factor, you don’t have to store any secrets, recovery codes, etc. on your own services. This means that there is an actual authentication layer that is outside of your own service’s infrastructure, which makes it harder for outsiders to comprimise your users, and it does this without adding more complexity to their authentication flow.
 				h1 Open source
-				p The whole thing is available as open source, and can be accessed #[a(href="https://github.com/trenskow/api.fourth.party") through Github].
+				p The whole thing is available as open source, and the #[a(href="https://github.com/trenskow/api.fourth.party") API] and #[a(href="https://github.com/trenskow/fourth.party") web] are available through Github.
 		div#container2
 			div#howto
 				h1 Get started
