--- a/views/terms.pug
+++ b/views/terms.pug
@@ -9,4 +9,4 @@ html
 			div#howto
 				h1 the.fourth.party
 				h2 Terms of Service
-				p the.fourth.party can be held responsible for nothing.
+				p the.fourth.party cannot be held responsible for anything you might or might not lose as a result of using this service.
