--- a/views/index.pug
+++ b/views/index.pug
@@ -23,7 +23,7 @@ html
 							input(type='text',id='email',placeholder='Your e-mail')
 							p.error#errorcontactemail This is an error
 						fieldset
-							label #[input(type='checkbox',id='agree')]I agree to the #[a(href="/terms/") terms of service]
+							label #[input(type='checkbox',id='agree')]I agree to the #[a(href="/terms/") terms of service].
 								
 						fieldset
 							input(type='submit',value='Create Application')
