--- a/views/index.pug
+++ b/views/index.pug
@@ -32,7 +32,7 @@ html
 					p Enjoy!
 			div#description
 				h1 What is the.fourth.party?
-				p Forth Party is a service that implements simple two factor authentication.  It enables other services to outsource their two factor authentication in a safe, simple and secure way.
+				p the.fourth.party is a service that implements simple two factor authentication.  It enables other services to outsource their two factor authentication in a safe, simple and secure way.
 				h1 How does it work?
 				p the.fourth.party is a simple REST API. It’s a REST implementation of the TOTP and HOTP protocols.
 				p Once you have created your application, you are able to create your own users using the APIs. You would typically implement username and password check on your own service, and use the.fourth.party to authenticate the second factor. Once you have created your user, you are able to download a QR code, which you can present to your user for them to add to their favorite authentication app. From here, code generated from the authentication app can be validated using the APIs.
